Fix and align popup items in main.css

--- a/static_dev/css/main.css
+++ b/static_dev/css/main.css
@@ -425,7 +425,7 @@ body {
     border-radius: 5px;
 }
 
-.form_content, .loading_message, .result_message .error_message {
+.form_content, .loading_message, .result_message, .error_message {
   margin: 60px;
 }
 
@@ -449,7 +449,7 @@ body {
     margin: 5px 0;
     border: none;
     border-radius: 3px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .form_content form {
@@ -492,6 +492,7 @@ body {
   flex-wrap: nowrap;
   overflow-x: auto;
   align-items: center;
+  margin: 10px 0;
 }
 
 .add-image-text {
@@ -508,8 +509,8 @@ body {
 
 .preview-image {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   overflow: hidden;
   margin-right: 10px;
   border-radius: 3px;
@@ -527,11 +528,11 @@ body {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: #00000055;
-  color: #ddd;
+  background-color: #00000088;
+  color: #fff;
   font-size: 30px;
-  line-height: 20px;
   text-align: center;
+  line-height: 60px;
   cursor: pointer;
 }
 
@@ -540,13 +541,13 @@ body {
 }
 
 .add-image-button {
-  width: 50px;
-  height: 50px;
-  background-color: #ccc;
+  width: 60px;
+  height: 60px;
+  background-color: #a0a0a0;
   color: #fff;
   font-size: 30px;
   text-align: center;
-  line-height: 50px;
+  line-height: 60px;
   cursor: pointer;
   border-radius: 3px;
 }
@@ -555,6 +556,26 @@ body {
   background-color: #ddd;
 }
 
+.personal_info_agree {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+#checkBox {
+    margin: 0;
+    cursor: pointer;
+}
+
+.checkbox {
+    margin: 0 20px;
+}
+
+.checkbox_label {
+    font-size: 12px;
+    cursor: pointer;
+}
 
 
 
